# grok_agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  WORKTREE_POLICY.md  add_git_tools.py  add_tool_map_lines.py  agent.py  agent.py.gitbackup  agent_git_methods_insert.txt  app.py  chat.py  costs.jsonl  debug_method_insert.txt  debug_tool_map_insert.txt  debug_tools_insert.txt  generate_ticket_docs.py  git_prompt_insert.txt  git_tool_map_add.txt  git_tool_map_insert.txt  insert_debug_method.py  insert_debug_tool_map.py  insert_debug_tools.py  insert_git_methods.py  insert_prompt.py  insert_refactor_methods.py  insert_refactor_prompt.py  insert_refactor_tool_map.py  insert_refactor_tool_schema.py  insert_tool_map.py  logger.py  memory.py  pyproject.toml  refactor_agent_method_insert.txt  refactor_prompt_insert.txt  refactor_tool_map_insert.txt  refactor_tool_schema_insert.txt  (+4 more)
.github/workflows/: ci.yml
.grok_agent/: agent-instructions.md
.grok_agent/skills/: README.md  git-workflow.SKILL.md  tdd.SKILL.md
.grok_agent/tools/: README.md  hello.py
.grok_agent/workflows/: README.md  tdd-workflow.md
agent_shared/: 0205ace0-14b9-4835-9ebf-7891ea5b5bb9.json  0700266d-28c9-40de-84e8-9b45765c1672.json  1acdcfe9-0109-484b-aa7e-826942bba3ad.json  304db166-732d-4567-907b-46d998f5af05.json  48ad3911-1d0f-4ba9-b8bb-0ca0e94a25e1.json  5d20f9de-019c-44ff-a45b-9ce4bda81ad6.json  860e5197-6de9-4f29-8631-c2dddf08bc3e.json  b7b9c98f-3dec-4497-9cbb-0ead78010bfe.json  eb347285-1f8c-4e44-98b3-3bebeec0e48e.json  ede830ca-b927-4dcf-8a3a-712be7b44c91.json
chats/: active.txt  chat-20260317-164838.json  chat-20260317-222847.json  chat-20260317-223355.json  chat-20260317-223942.json
chromadb/: chroma.sqlite3
deploy/: docker-compose-user-auth.md
docs/: improvement_plan.md  project_summary.md
docs/work/fortis/: containerization_report.md
docs/work/fortis/repos/: containerization_report.md
docs/work/fortis/ui/: deployment.md  directory-structure.md  index.md  models.md  overview.md  routes.md
skills/: README.md
swarm/: __init__.py  schemas.py
swarm/cluster/: __init__.py  db.py  main.py  requirements.txt  schemas.py
swarm/cluster/templates/: dashboard.html  index.html
swarm/node/: main.py
swarm/schemas/: agent.py
tests/: bad_code.py  test-e2e-agent-workflow.md  test-integration-subagent-spawning.md  test-integration-tdd-cycle.md  test-integration-web-search.md  test-unit-file-operations.md  test-unit-fsm-transitions.md  test-unit-github-cli.md  test-unit-jira-cli.md  test-unit-shell-execution.md  test-unit-tool-parser.md  test_agent.py  test_chat_help.py  test_git_tools.py  test_goal.py  test_project_setup.py  test_skills.py  test_tools.py  test_web.py
tests/test_node/: package-lock.json  package.json
tools/: code_gen.py  debug.py  refactor.py  skills.py  tdd.py  work_item_watcher.py
tools/git/: cli.py
tools/github/: cli.py
tools/jira/: cli.py  get_ticket.py  list_my_tickets.py  search_tickets.py
web/: main.py
