[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-agent"
version = "1.0.0"
description = "🚀 Much better autonomous coding agent powered by xAI Grok. Enhanced with Streamlit UI, memory, new tools, and more."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "xai-sdk",
  "python-dotenv",
  "requests",
  "pydantic",
  "rich",
  "pyperclip",
  "jira",
]

[project.optional-dependencies]
full = [
  "streamlit",
  "chromadb",
  "gradio",
]

[project.scripts]
grok-agent = "agent:main"
grok-chat = "chat:main"
grok-tdd = "tools.tdd:main"

[project.urls]
Homepage = "https://github.com/rooschristopher/grok_agent"
Repository = "https://github.com/rooschristopher/grok_agent.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "PT", "SIM"]
ignore = ["E501", "SIM118"]

[tool.setuptools.packages.find]
exclude = ["logs*", "chats*", "config*", "static*", "tests*"]