[build-system]
requires = [&quot;setuptools&gt;=61&quot;, &quot;wheel&quot;]
build-backend = &quot;setuptools.build_meta&quot;

[project]
name = &quot;grok-agent&quot;
version = &quot;1.0.0&quot;
description = &quot;🚀 Much better autonomous coding agent powered by xAI Grok. Enhanced with Streamlit UI, memory, new tools, and more.&quot;
readme = &quot;README.md&quot;
requires-python = &quot;&gt;=3.12&quot;
dependencies = [
  &quot;xai-sdk&quot;,
  &quot;python-dotenv&quot;,
  &quot;requests&quot;,
  &quot;pydantic&quot;,
  &quot;rich&quot;,
  &quot;pyperclip&quot;,
  &quot;jira&quot;,
  &quot;fastapi&quot;,
  &quot;uvicorn[standard]&quot;,
  &quot;python-multipart&quot;,
]

[project.optional-dependencies]
full = [
  &quot;streamlit&quot;,
  &quot;chromadb&quot;,
  &quot;gradio&quot;,
]

[project.scripts]
grok-agent = &quot;agent:main&quot;
grok-chat = &quot;chat:main&quot;
grok-tdd = &quot;tools.tdd:main&quot;

[project.urls]
Homepage = &quot;https://github.com/rooschristopher/grok_agent&quot;
Repository = &quot;https://github.com/rooschristopher/grok_agent.git&quot;

[tool.pytest.ini_options]
testpaths = [&quot;tests&quot;]
python_files = &quot;test_*.py&quot;
python_classes = &quot;Test*&quot;
python_functions = &quot;test_*&quot;
addopts = &quot;-v --strict-markers&quot;

[tool.ruff]
line-length = 100
select = [&quot;E&quot;, &quot;F&quot;, &quot;W&quot;, &quot;I&quot;, &quot;UP&quot;, &quot;B&quot;, &quot;A&quot;, &quot;C4&quot;, &quot;PT&quot;, &quot;SIM&quot;]
ignore = [&quot;SIM118&quot;]

[tool.setuptools.packages.find]
exclude = [&quot;logs*&quot;, &quot;chats*&quot;, &quot;config*&quot;, &quot;static*&quot;, &quot;tests*&quot;]

[dependency-groups]
dev = [
    &quot;black&gt;=24.3.1&quot;,
    &quot;pre-commit&gt;=4.5.1&quot;,
    &quot;pytest&gt;=9.0.2&quot;,
    &quot;ruff&gt;=0.15.6&quot;,
]